samples/_failures_safe/1761002032_e32cd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5739f0f7.c: In function ‘main’:
./samples/SAFE/__tmp_5739f0f7.c:133:5: error: expected declaration or statement at end of input
  133 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "System started");
      |     ^~~~~~~~~~~~~
